# lain-art

./: .gitignore  Cargo.toml  FACE_RECOGNITION_STATUS.md  README.md  canister_ids.json  dfx.json  download_face_detection_model.sh  lain_mobilenetv3.onnx  package-lock.json  package.json  remove_face.ts  test_lain_classifier.py  test_recognition.ts  train_lain_classifier.py  upload_face.ts  upload_model_to_canister.sh
.github/: copilot-instructions.md
chainlink/: package-lock.json  package.json
chainlink/config/: sepolia.json
chainlink/functions/: verifiy-art.js
evm/: .gitignore
evma/: hardhat.config.js  package-lock.json  package.json
evma/contracts/: ArtVerifier.sol
evma/scripts/: deploy.js
icp/: .gitignore  README.md  canister_ids.json  dfx.json  package-lock.json  package.json
icp/.astro/: settings.json
icp/src/lain_art_backend/: Cargo.toml
icp/src/lain_art_backend/src/: lib.rs  onnx.rs
icp/src/lain_art_frontend/: package-lock.json  package.json
icp/src/lain_art_frontend/components/: Footer.astro  Header.astro
icp/src/lain_art_frontend/lib/: auth.ts
icp/src/lain_art_frontend/src/: App.js
icp/src/lain_art_frontend/styles/: global.css  header.css  index.css
src/declarations/lain_art_backend/: index.js  lain_art_backend.did  lain_art_backend.did.d.ts  lain_art_backend.did.js
src/lain_art_backend/: Cargo.toml  build.rs
src/lain_art_backend/src/: lib.rs  onnx.rs  storage.rs  transactions.rs
src/lain_art_frontend/: package-lock.json
src/lain_art_frontend/lib/: auth.ts
src/lain_art_frontend/styles/: footer.css  howto.css
(+11 files in other folders)
