[package]
name = "lain_art_backend"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
bytes = "1.5.0"
candid = "0.10"
ic-cdk = "0.14.0"
ic-stable-structures = "0.6"
ic-wasi-polyfill = "0.4.1"

# keep image minimal, avoid pulling in rand/getrandom
image = { version = "0.25.1", default-features = false, features = ["png"] }

prost = "0.11.0"
prost-types = "0.11.0"
serde = { version = "1.0", features = ["derive"] }

# tract-onnx pinned to a known ICP‑compatible revision
tract-onnx = { git = "https://github.com/sonos/tract", rev = "2a2914ac29390cc08963301c9f3d437b52dd321a" }

# 👇 override getrandom for wasm32 so it doesn't try to use OS/JS backends
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", default-features = false, features = ["custom"] }
